// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Alert danger renders correctly 1`] = `
<jest>
  <div
    class="bcl-alert alert alert-danger d-flex align-items-center alert-dismissible fade show text-dark"
    role="alert"
  >
    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start text-danger bi icon--s"
    >
      <use
        xlink:href="/icons.svg#dash-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <div
        class="alert-heading h4"
      >
        Hey there!
      </div>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;

exports[`OE - Alert dark renders correctly 1`] = `
<jest>
  <div
    class="bcl-alert alert alert-dark d-flex align-items-center alert-dismissible fade show text-dark"
    role="alert"
  >
    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start text-dark bi icon--s"
    >
      <use
        xlink:href="/icons.svg#info-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <div
        class="alert-heading h4"
      >
        Hey there!
      </div>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;

exports[`OE - Alert info renders correctly 1`] = `
<jest>
  <div
    class="bcl-alert alert alert-info d-flex align-items-center alert-dismissible fade show text-dark"
    role="alert"
  >
    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start text-info bi icon--s"
    >
      <use
        xlink:href="/icons.svg#info-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <div
        class="alert-heading h4"
      >
        Hey there!
      </div>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;

exports[`OE - Alert light renders correctly 1`] = `
<jest>
  <div
    class="bcl-alert alert alert-light d-flex align-items-center alert-dismissible fade show text-dark"
    role="alert"
  >
    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start bi icon--s"
    >
      <use
        xlink:href="/icons.svg#info-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <div
        class="alert-heading h4"
      >
        Hey there!
      </div>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;

exports[`OE - Alert primary renders correctly 1`] = `
<jest>
  <div
    class="bcl-alert alert alert-primary d-flex align-items-center alert-dismissible fade show text-dark"
    role="alert"
  >
    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start text-primary bi icon--s"
    >
      <use
        xlink:href="/icons.svg#info-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <div
        class="alert-heading h4"
      >
        Hey there!
      </div>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;

exports[`OE - Alert renders correctly with icon changed 1`] = `
<jest>
  <div
    class="bcl-alert alert alert-primary d-flex align-items-center alert-dismissible fade show text-dark"
    role="alert"
  >
    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start text-primary bi icon--s"
    >
      <use
        xlink:href="/icons.svg#clock"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <div
        class="alert-heading h4"
      >
        Hey there!
      </div>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;

exports[`OE - Alert renders correctly without animation for the close button 1`] = `
<jest>
  <div
    class="bcl-alert alert alert-primary d-flex align-items-center alert-dismissible text-dark"
    role="alert"
  >
    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start text-primary bi icon--s"
    >
      <use
        xlink:href="/icons.svg#info-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <div
        class="alert-heading h4"
      >
        Hey there!
      </div>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;

exports[`OE - Alert renders correctly without close button 1`] = `
<jest>
  <div
    class="bcl-alert alert alert-primary d-flex align-items-center fade show text-dark"
    role="alert"
  >
    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start text-primary bi icon--s"
    >
      <use
        xlink:href="/icons.svg#info-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <div
        class="alert-heading h4"
      >
        Hey there!
      </div>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
  </div>
</jest>
`;

exports[`OE - Alert secondary renders correctly 1`] = `
<jest>
  <div
    class="bcl-alert alert alert-secondary d-flex align-items-center alert-dismissible fade show text-dark"
    role="alert"
  >
    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start text-secondary bi icon--s"
    >
      <use
        xlink:href="/icons.svg#info-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <div
        class="alert-heading h4"
      >
        Hey there!
      </div>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;

exports[`OE - Alert success renders correctly 1`] = `
<jest>
  <div
    class="bcl-alert alert alert-success d-flex align-items-center alert-dismissible fade show text-dark"
    role="alert"
  >
    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start text-success bi icon--s"
    >
      <use
        xlink:href="/icons.svg#check-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <div
        class="alert-heading h4"
      >
        Hey there!
      </div>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;

exports[`OE - Alert warning renders correctly 1`] = `
<jest>
  <div
    class="bcl-alert alert alert-warning d-flex align-items-center alert-dismissible fade show text-dark"
    role="alert"
  >
    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start text-warning bi icon--s"
    >
      <use
        xlink:href="/icons.svg#exclamation-triangle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <div
        class="alert-heading h4"
      >
        Hey there!
      </div>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;
